--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 deploy_key
 deploy_key.pub
 .DS_Store
+.DS_Store
+src/.DS_Store
+src/plugin.video.iptv.archive.recorder/.DS_Store
+src/plugin.video.iptv.archive.recorder/resources/.DS_Store
+src/plugin.video.iptv.archive.recorder/resources/language/.DS_Store
