--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ src/.DS_Store
 src/plugin.video.iptv.archive.recorder/.DS_Store
 src/plugin.video.iptv.archive.recorder/resources/.DS_Store
 src/plugin.video.iptv.archive.recorder/resources/language/.DS_Store
+src/plugin.video.iptv.archive.recorder/.DS_Store
+src/plugin.video.iptv.archive.recorder/resources/.DS_Store
+src/plugin.video.iptv.archive.recorder/resources/language/.DS_Store
