--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 deploy_key
 deploy_key.pub
+src/plugin.video.iptv.archive.recorder/resources/.DS_Store
+src/plugin.video.iptv.archive.recorder/.DS_Store
