--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ src/plugin.video.iptv.archive.recorder/resources/language/.DS_Store
 src/plugin.video.iptv.archive.recorder/.DS_Store
 src/plugin.video.iptv.archive.recorder/resources/.DS_Store
 src/plugin.video.iptv.archive.recorder/resources/language/.DS_Store
+src/plugin.video.iptv.archive.recorder/.DS_Store
+src/plugin.video.iptv.archive.recorder/resources/.DS_Store
+src/plugin.video.iptv.archive.recorder/resources/language/.DS_Store
