--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ src/plugin.video.iptv.archive.recorder/resources/language/.DS_Store
 src/plugin.video.iptv.archive.recorder/.DS_Store
 src/plugin.video.iptv.archive.recorder/resources/.DS_Store
 src/plugin.video.iptv.archive.recorder/resources/language/.DS_Store
+src/plugin.video.iptv.archive.recorder/resources/.DS_Store
+src/plugin.video.iptv.archive.recorder/resources/language/.DS_Store
+src/plugin.video.iptv.archive.recorder/.DS_Store
