--- a/.github/config.json
+++ b/.github/config.json
@@ -1,11 +1,11 @@
 {
     "branchmap": [{
-            "name": "master",
+            "name": "leia",
             "minversion": "18.0.0"
         },
         {
             "name": "matrix",
-            "minversion": "19.0.0"
+            "minversion": "18.9.9"
 
         }
     ]
