--- a/.github/config.json
+++ b/.github/config.json
@@ -5,7 +5,7 @@
         },
         {
             "name": "matrix",
-            "minversion": "18.9.1"
+            "maxversion": "19.9.0"
 
         }
     ]
