--- a/.gitignore
+++ b/.gitignore
@@ -3,18 +3,18 @@ deploy_key.pub
 .DS_Store
 .DS_Store
 src/.DS_Store
-src/plugin.video.iptv.archive.recorder/.DS_Store
-src/plugin.video.iptv.archive.recorder/resources/.DS_Store
-src/plugin.video.iptv.archive.recorder/resources/language/.DS_Store
-src/plugin.video.iptv.archive.recorder/.DS_Store
-src/plugin.video.iptv.archive.recorder/resources/.DS_Store
-src/plugin.video.iptv.archive.recorder/resources/language/.DS_Store
-src/plugin.video.iptv.archive.recorder/.DS_Store
-src/plugin.video.iptv.archive.recorder/resources/.DS_Store
-src/plugin.video.iptv.archive.recorder/resources/language/.DS_Store
-src/plugin.video.iptv.archive.recorder/.DS_Store
-src/plugin.video.iptv.archive.recorder/resources/.DS_Store
-src/plugin.video.iptv.archive.recorder/resources/language/.DS_Store
-src/plugin.video.iptv.archive.recorder/resources/.DS_Store
-src/plugin.video.iptv.archive.recorder/resources/language/.DS_Store
-src/plugin.video.iptv.archive.recorder/.DS_Store
+src/plugin.video.iptv.archive.downloader/.DS_Store
+src/plugin.video.iptv.archive.downloader/resources/.DS_Store
+src/plugin.video.iptv.archive.downloader/resources/language/.DS_Store
+src/plugin.video.iptv.archive.downloader/.DS_Store
+src/plugin.video.iptv.archive.downloader/resources/.DS_Store
+src/plugin.video.iptv.archive.downloader/resources/language/.DS_Store
+src/plugin.video.iptv.archive.downloader/.DS_Store
+src/plugin.video.iptv.archive.downloader/resources/.DS_Store
+src/plugin.video.iptv.archive.downloader/resources/language/.DS_Store
+src/plugin.video.iptv.archive.downloader/.DS_Store
+src/plugin.video.iptv.archive.downloader/resources/.DS_Store
+src/plugin.video.iptv.archive.downloader/resources/language/.DS_Store
+src/plugin.video.iptv.archive.downloader/resources/.DS_Store
+src/plugin.video.iptv.archive.downloader/resources/language/.DS_Store
+src/plugin.video.iptv.archive.downloader/.DS_Store
